# ML4T_DEV

./: .gitignore  AGENTS.md  CLAUDE.md  Compress.md  Instructions_eng.md  README.md  instructions_th.md  ml4t_handoff_20260606.md
.claude/: settings.local.json
Chatbot/: .gitignore  (+4 more)
research/: 260605_research_summary.md  README.md  SP500_incremental_runbook.md  backtest_composite_signals.py  backtest_lgbm_walkforward.py  backtest_long_only.py  backtest_sp20_candidates.py  backtest_sp20_long_only.py  backtest_walkforward_10yr.py  build_research_dataset.py  build_sp20_research_dataset.py  build_sp500_10yr_dataset.py  build_sp500_ff12_sectors.py  build_sp500_pit_composition.py  check_sp500_health.py  cluster_signals.py  compare_sp20_ipca_vs_signal.py  compare_sp20_ipca_vs_signal_support.py  daily_run.py  daily_workflow.py  engineer_discovery_snapshot.py  engineer_labeling_study.py  fetch_sp500_chunks.py  fetch_sp500_historical_extended.py  lock_benchmark.py  onboard_portfolio.py  portfolio_status.py  pyproject.toml  record_fill.py  research_universe.py  screen_signals.py  screen_sp20_signals.py  screen_sp500_all_signals.py  summarize_sp500_anomalies.py  train_sp20_ipca.py  update_sp500_daily.py  validate_long_only_candidates.py
research/configs/: manual_active_strategy.yaml  sp20_core_features.yaml  sp500_all_features.yaml  sp500_engineer_expanded_features.yaml
research/manual_portfolio/: __init__.py  cli.py  models.py  registry.py  service.py  storage.py
research/state/manual_portfolios/.telegram/: processed_updates.jsonl
research/tests/: test_manual_portfolio.py
(+19 files in other folders)
